#50-Trade_with_bank: refactored ports and tradingservice to use a map instead of list